2021-12-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * www/programming.rst: Update URLs.  Add a link to a 'Go' binding.

        * Copyright.txt: Update Copyright text for 2022 and prepare for
        new year.

2021-12-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/{gif.c, meta.c, miff.c, mpc.c, pdb.c, pnm.c xpm.c}: Rely
        on _MagickReallocateResourceLimitedMemory() to extend memory
        allocation.

        * magick/memory.c (_MagickReallocateResourceLimitedMemory): Remove
        size limit from realloc binary expansion.  Fix reallocs tally counts.

        * magick/memory-private.h(_MagickReallocateResourceLimitedMemory)
        : Remove use of GCC/Clang '__attribute_malloc__' since it is not
        appropriate for this function.

        * magick/memory.c (_MagickReallocateResourceLimitedMemory):
        Maintain a tally of the total number of octets moved by realloc.

2021-12-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * coders/mat.c (ReadMATImage): Change 'ldblk' to size_t and
        check related calculations for overflow and to avoid possible
        negative seek offsets.
        (FixLogical): Pass 'ldblk' as size_t.
        (ReadMATImage): Assure that corrupt/incomplete image is not
        returned.

2021-12-25  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

        * magick/profile.c (AppendImageProfile): Deprecate this function
        since JPEG was the last user.

        * coders/jpeg.c (AppendProfile): Implement more efficient way to
        append JPEG profile chunks.  Addresses SourceForge issue #634
        "Slow to read JPEG with big APP1 profile".

        * coders/jp2.c (ReadJP2Image): Free 'options' which is now
        allocated memory.

        * coders/png.c (ReadOnePNGImage): Support the define
        png:chunk-malloc-max=limit in order to allow reading PNG files
        which report "chunk data is too large" or to reduce the default