@@ -37,6 +37,9 @@
 
 <p>2021-12-30  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
+<p>* www/index.rst: Document that
+<a class="reference external" href="https://graphicsmagick.sourceforge.io/index.html">https://graphicsmagick.sourceforge.io/index.html</a> is also
+available.</p>
 <p>* www/programming.rst: Update URLs.  Add a link to a 'Go' binding.</p>
 <p>* Copyright.txt: Update Copyright text for 2022 and prepare for
 new year.</p>
