@@ -57,7 +57,9 @@
 </tr>
 </tbody>
 </table>
-<p>Check <a class="reference external" href="http://www.GraphicsMagick.org/">http://www.GraphicsMagick.org/</a> for the latest version of this page.</p>
+<p>Check <a class="reference external" href="http://www.GraphicsMagick.org/">http://www.GraphicsMagick.org/</a> or
+<a class="reference external" href="https://graphicsmagick.sourceforge.io/index.html">https://graphicsmagick.sourceforge.io/index.html</a> for the latest
+version of this page.</p>
 <p>GraphicsMagick is the swiss army knife of image processing. Comprised
 of 267K physical lines (according to David A. Wheeler's <a class="reference external" href="https://dwheeler.com/sloccount/">SLOCCount</a>)
 of source code in the base package (or 1,225K including 3rd party
